--- a/pages/secondblocktest.html
+++ b/pages/secondblocktest.html
@@ -38,6 +38,7 @@
     .mainblock {
       background-color: #edcec5;
       width: 90%;
+      max-width: 1708px;
       height: 90%;
       border-radius: 15px;
       display: flex;
@@ -247,7 +248,16 @@
               <li><a href="secondblocktasks.html">Практические задания</a></li>
               <li><a href="secondblocklinks.html">Полезные материалы</a></li>
             </ul>
-          <li><a href="#">СУБД</a></li>
+            <li><a href="thirdblockoonepage">СУБД</a>
+              <ul>
+                  <li><a href="thirdblockonepage.html">Определение СУБД</a></li>
+                  <li><a href="thirdblocktwopage.html">Создание БД</a></li>
+                  <li><a href="thirdblockthreepage.html">Написание запросов</a></li>
+                  <li><a href="thirdblocktest.html">Итоговый тест</a></li>
+                  <li><a href="thirdblocktasks.html" >Практические задания</a></li>
+                  <li><a href="thirdblocklinks.html">Полезные материалы</a></li>
+              </ul>
+          </li>
         </ul>
       </nav>
 
