--- a/pages/thirdblocklinks.html
+++ b/pages/thirdblocklinks.html
@@ -184,14 +184,14 @@
             <nav class="menu">
                 <ul>
                     <li><a href="../start.html">Главная</a></li>
-                    <li><a href="firstblockonepage.html" class="activlink">Введение в БД</a>
+                    <li><a href="firstblockonepage.html">Введение в БД</a>
                         <ul>
                             <li><a href="firstblockonepage.html">Определение и назначение БД</a></li>
                             <li><a href="firstblocktwopage.html">ER (entity-relationship)-диаграммы</a></li>
                             <li><a href="firstblockthreepage.html">Нормализация баз данных</a></li>
                             <li><a href="firstblocktest.html">Итоговый тест</a></li>
                             <li><a href="firstblocktasks.html">Практические задания</a></li>
-                            <li><a href="firstblocklinks.html" class="activlink">Полезные материалы</a></li>
+                            <li><a href="firstblocklinks.html">Полезные материалы</a></li>
                         </ul>
                     </li>
                     <li><a href="secondblockonepage.html">Диаграммы UML</a>
@@ -201,17 +201,17 @@
                             <li><a href="secondblockthreepage.html">Построение диаграмм на ДЭ</a></li>
                             <li><a href="secondblocktest.html">Итоговый тест</a></li>
                             <li><a href="secondblocktasks.html">Практические задания</a></li>
-                            <li><a href="secondblocklinks.html">Полезные материалы</a></li>
+                            <li><a href="secondblocklinks.html" >Полезные материалы</a></li>
                         </ul>
                     </li>
-                    <li><a href="thirdblockoonepage">СУБД</a>
+                    <li><a href="thirdblockoonepage" class="activlink">СУБД</a>
                         <ul>
                             <li><a href="thirdblockonepage.html">Определение СУБД</a></li>
                             <li><a href="thirdblocktwopage.html">Создание БД</a></li>
                             <li><a href="thirdblockthreepage.html">Написание запросов</a></li>
                             <li><a href="thirdblocktest.html">Итоговый тест</a></li>
                             <li><a href="thirdblocktasks.html" >Практические задания</a></li>
-                            <li><a href="thirdblocklinks.html">Полезные материалы</a></li>
+                            <li><a href="thirdblocklinks.html" class="activlink">Полезные материалы</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -220,25 +220,24 @@
             <div class="infoblocks">
                 <div class="verh">
                     <ul class="breadcrumb">
-                        <li><a href="firstblockonepage.html">Введение в БД</a></li>
+                        <li><a href="thirdblockonepage.html">СУБД</a></li>
                         <li>Полезные ссылки</li>
                     </ul>
                 </div>
                 <div class="infotext">
                     <p>Здесь можно перейти по ссылкам и изучить дополнительные материалы по пройденной теме</p>
                     <ol>
-                        <li><a href="https://metanit.com/sql/tutorial/1.1.php">Реляционные базы данных</a></li>
-                        <li><a href="https://nationalteam.worldskills.ru/skills/proektirovanie-er-diagrammy/">Проектирование
-                                er-диаграммы</a></li>
                         <li><a
-                                href="https://learn.microsoft.com/ru-ru/office/troubleshoot/access/database-normalization-description">Описание
-                                нормализации базы данных</a></li>
+                                href="https://skillbox.ru/media/code/sistema-upravleniya-bazami-dannykh-chto-eto-takoe-i-zachem-ona-nuzhna/">Что такое СУБД: виды, классификация</a></li>
+                        <li><a
+                                href="https://metanit.com/sql/postgresql/1.1.php">Знакомство с PostgreSQL</a></li>
+                        <li><a
+                                href="https://postgrespro.ru/docs/postgresql/">Документация PostgreeSQL</a></li>
                     </ol>
                 </div>
                 <div class="btnstransition">
                     <button onclick="document.location='../start.html'">На главную</button>
-                    <button onclick="document.location='firstblockonepage.html'">К началу</button>
-                    <button onclick="document.location='secondblockonepage.html'">2 блок</button>
+                    <button onclick="document.location='thirdblockonepage.html'">К началу</button>
                 </div>
             </div>
         </div>
