--- a/start.html
+++ b/start.html
@@ -26,6 +26,7 @@
         .mainblock {
             background-color: #edcec5;
             width: 90%;
+            max-width: 1708px;
             height: 90%;
             border-radius: 15px;
             display: flex;
@@ -190,7 +191,7 @@
                             <li><a href="pages/secondblocklinks.html">Полезные материалы</a></li>
                         </ul>
                     </li>
-                    <li><a href="pages/thirdblockoonepage">СУБД</a>
+                    <li><a href="pages/thirdblockoonepage.html">СУБД</a>
                         <ul>
                             <li><a href="pages/thirdblockonepage.html">Определение СУБД</a></li>
                             <li><a href="pages/thirdblocktwopage.html">Создание БД</a></li>
@@ -253,7 +254,7 @@
                             реализовывать
                             таблицы, как к ним писать запросы, и как создать схему диаграмму данных.
                         </p>
-                        <a href="#" class="read-more">
+                        <a href="pages/thirdblockonepage.html" class="read-more">
                             Перейти к изучению
                         </a>
                     </div>
