--- a/pages/secondblocktasks.html
+++ b/pages/secondblocktasks.html
@@ -40,6 +40,7 @@
         .background {
             height: 100%;
             width: 100%;
+            max-width: 1708px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -222,7 +223,16 @@
                             <li><a href="secondblocktasks.html" class="activlink">Практические задания</a></li>
                             <li><a href="secondblocklinks.html">Полезные материалы</a></li>
                         </ul>
-                    <li><a href="#">СУБД</a></li>
+                        <li><a href="thirdblockoonepage">СУБД</a>
+                            <ul>
+                                <li><a href="thirdblockonepage.html">Определение СУБД</a></li>
+                                <li><a href="thirdblocktwopage.html">Создание БД</a></li>
+                                <li><a href="thirdblockthreepage.html">Написание запросов</a></li>
+                                <li><a href="thirdblocktest.html">Итоговый тест</a></li>
+                                <li><a href="thirdblocktasks.html" >Практические задания</a></li>
+                                <li><a href="thirdblocklinks.html">Полезные материалы</a></li>
+                            </ul>
+                        </li>
                 </ul>
             </nav>
 
